# simple_drf_pagination

./: LICENSE  README.md  pyproject.toml
simple_drf_pagination/: __init__.py  paginate.py
tests/: conftest.py  test_paginate.py  test_real_pagination.py
