[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-drf-pagination"
version = "0.1.0"
description = "Zero-boilerplate pagination helpers for Django REST Framework"
authors = [{ name="EKRAMUL ISLAM SHADIK" }]
dependencies = ["djangorestframework>=3.14"]
readme = "README.md"
requires-python = ">=3.8"
